--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="46dp"
-        android:layout_marginTop="272dp"
+        android:layout_marginTop="320dp"
         android:text="@string/shop_everything"
         android:textColor="@android:color/black"
         android:textSize="20sp"
@@ -56,13 +56,13 @@
 
     <Button
         android:id="@+id/buttonLogin"
-        android:background="@drawable/button_shape_login"
         android:layout_width="280dp"
         android:layout_height="49dp"
         android:layout_marginTop="40dp"
         android:text="@string/login"
         android:textColor="@android:color/black"
         android:textStyle="bold"
+        android:backgroundTint="@color/palet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewTagline"
@@ -70,13 +70,13 @@
 
     <Button
         android:id="@+id/buttonCreateAccount"
-        android:background="@drawable/button_shape_regis"
         android:layout_width="280dp"
         android:layout_height="49dp"
         android:layout_marginTop="8dp"
         android:text="@string/create_account"
         android:textColor="@android:color/black"
         android:textStyle="bold"
+        android:backgroundTint="@color/palet1"
         android:theme="@style/ShapeAppearance.MyApp.Corner.None"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
