--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -7,13 +7,15 @@
     tools:context=".view.register.RegisterActivity">
 
     <!-- Top Green Background -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="416dp"
-        android:layout_alignParentTop="true"
-        android:background="@color/palet" />
 
     <!-- Logo -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="560dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="-78dp"
+        android:background="@drawable/latar_hijau" />
+
     <ImageView
         android:id="@+id/logo"
         android:layout_width="wrap_content"
