--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="palet">#82CD47</color>
-    <color name="palet1">#A5D6A7</color>
+    <color name="palet1">#C0E6A3</color>
+    <color name="gray">#555555</color>
+    <color name="red">#BF1F1F</color>
 </resources>
